...
                                        <rect key="frame" x="0.0" y="0.0" width="330" height="44"/>
                                        <color key="backgroundColor" red="0.58735795449999995" green="0.25991252349999999" blue="0.13727999539999999" alpha="0.43912975990000003" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailAddressTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="52" width="330" height="44"/>
                                        <color key="backgroundColor" red="0.58735795449999995" green="0.25991252349999999" blue="0.13727999539999999" alpha="0.43912975993377484" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="firstNameTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="104" width="330" height="44"/>
                                        <color key="backgroundColor" red="0.58735795449999995" green="0.25991252349999999" blue="0.13727999539999999" alpha="0.43912975990000003" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <rect key="frame" x="0.0" y="156" width="330" height="44"/>
                                        <color key="backgroundColor" red="0.58735795449999995" green="0.25991252349999999" blue="0.13727999539999999" alpha="0.43912975990000003" colorSpace="custom" customColorSpace="displayP3"/>
                                        <accessibility key="accessibilityConfiguration" identifier="repeatPasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="40" y="342" width="310" height="60"/>
                                <color key="backgroundColor" red="0.58735795449999995" green="0.25991252349999999" blue="0.13727999539999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="ccS-hX-JNS"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UXg-aA-Ae8">
                                        <rect key="frame" x="0.0" y="0.0" width="76.333333333333329" height="55.666666666666664"/>
                                        <accessibility key="accessibilityConfiguration" identifier="leftButton"/>
                                        <color key="tintColor" red="0.4915167298" green="0.21750169990000001" blue="0.1148795447" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <state key="normal" title="Button"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pvd-rv-Uhv">
                                        <rect key="frame" x="96.333333333333343" y="0.0" width="63" height="55.666666666666664"/>
                                        <accessibility key="accessibilityConfiguration" identifier="throwBtn"/>
                                        <color key="tintColor" red="0.4915167298" green="0.21750169990000001" blue="0.1148795447" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <state key="normal" title="Button"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mfE-n9-BCk">
                                        <rect key="frame" x="179.33333333333334" y="0.0" width="68.666666666666657" height="55.666666666666664"/>
                                        <accessibility key="accessibilityConfiguration" identifier="rightButton"/>
                                        <color key="tintColor" red="0.4915167298" green="0.21750169990000001" blue="0.1148795447" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <state key="normal" title="Button"/>
...
